build:将 Java 版本从 17 降为8
- 修改了多个模块的 Maven 配置文件，将 Java 编译源和目标版本从 17 改为 8
- 更新了根 pom.xml 文件，添加 java.version 属性并设置为 8
- 调整了 MetaspaceOOM 类的运行命令示例
- 在 DemoApplication 中添加了 ApplicationRunner Bean，用于打印应用启动信息